[package]
name = "mark"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.14.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
open = "2.0.1"
image = { version = "0.23", default-features = false, features = ["ico"] }
url = "2.2.2"

[build-dependencies]
winres = "0.1"